// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 20,
    "target": "samsung",
    "version": "20",
  },
  {
    "parsedVersion": 17,
    "target": "safari",
    "version": "17.0",
  },
  {
    "parsedVersion": 103,
    "target": "opera",
    "version": "103",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 16.6,
    "target": "ios_saf",
    "version": "16.6-16.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 119,
    "target": "edge",
    "version": "119",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.18,
    "target": "baidu",
    "version": "13.18",
  },
  {
    "parsedVersion": 122,
    "target": "android",
    "version": "122",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 123,
    "target": "and_ff",
    "version": "123",
  },
  {
    "parsedVersion": 122,
    "target": "and_chr",
    "version": "122",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 22,
    "target": "samsung",
    "version": "22",
  },
  {
    "parsedVersion": 17.2,
    "target": "safari",
    "version": "17.2",
  },
  {
    "parsedVersion": 105,
    "target": "opera",
    "version": "105",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6-15.8",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 121,
    "target": "edge",
    "version": "121",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 122,
    "target": "android",
    "version": "122",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 123,
    "target": "and_ff",
    "version": "123",
  },
  {
    "parsedVersion": 122,
    "target": "and_chr",
    "version": "122",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 20,
    "target": "samsung",
    "version": "20",
  },
  {
    "parsedVersion": 17,
    "target": "safari",
    "version": "17.0",
  },
  {
    "parsedVersion": 103,
    "target": "opera",
    "version": "103",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 16.6,
    "target": "ios_saf",
    "version": "16.6-16.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 119,
    "target": "edge",
    "version": "119",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.18,
    "target": "baidu",
    "version": "13.18",
  },
  {
    "parsedVersion": 122,
    "target": "android",
    "version": "122",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 123,
    "target": "and_ff",
    "version": "123",
  },
  {
    "parsedVersion": 122,
    "target": "and_chr",
    "version": "122",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 22,
    "target": "samsung",
    "version": "22",
  },
  {
    "parsedVersion": 17.2,
    "target": "safari",
    "version": "17.2",
  },
  {
    "parsedVersion": 105,
    "target": "opera",
    "version": "105",
  },
  {
    "parsedVersion": 73,
    "target": "op_mob",
    "version": "73",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6-15.8",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 121,
    "target": "edge",
    "version": "121",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 122,
    "target": "android",
    "version": "122",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 13.1,
    "target": "and_qq",
    "version": "13.1",
  },
  {
    "parsedVersion": 123,
    "target": "and_ff",
    "version": "123",
  },
  {
    "parsedVersion": 122,
    "target": "and_chr",
    "version": "122",
  },
]
`;
